--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "googleapis": "^155.0.1",
     "lucide-react": "^0.536.0",
     "mongodb": "^6.18.0",
     "react": "^19.1.0",
