--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,7 +3,7 @@
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "target": "ES2022",
     "lib": ["ES2022"],
-    "module": "CommonJS", // Node API functions
+    "module": "ESNext", // Node API functions
     "skipLibCheck": true, // ✅ prevents google-auth-library errors
     "esModuleInterop": true,
     "moduleResolution": "node",
