--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,12 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
+    "module": "ESNext",
+    "target": "ES2022",
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     },
-    "skipLibCheck": true // ✅ Add here so it's applied to all references
+    "skipLibCheck": true
   }
 }
