--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@tailwindcss/vite": "^4.1.11",
+    "@types/jsonwebtoken": "^9.0.10",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "googleapis": "^155.0.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.536.0",
     "mongodb": "^6.18.0",
     "react": "^19.1.0",
@@ -34,6 +37,7 @@
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@tailwindcss/postcss": "^4.1.11",
+    "@types/bcrypt": "^6.0.0",
     "@types/next": "^9.0.0",
     "@types/node": "^24.2.0",
     "@types/react": "^19.1.8",
