--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "googleapis": "^155.0.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.536.0",
+    "luxon": "^3.7.1",
     "mongodb": "^6.18.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -38,6 +39,7 @@
     "@eslint/js": "^9.30.1",
     "@tailwindcss/postcss": "^4.1.11",
     "@types/bcrypt": "^6.0.0",
+    "@types/luxon": "^3.7.1",
     "@types/next": "^9.0.0",
     "@types/node": "^24.2.0",
     "@types/react": "^19.1.8",
