--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,15 @@
 {
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
+  "version": 2,
+  "framework": "vite",
+  "devCommand": "vite",
+  "buildCommand": "vite build",
+  "outputDirectory": "dist",
+  "builds": [
+    { "src": "api/**/*.ts", "use": "@vercel/node@5" },
+    { "src": "api/**/*.js", "use": "@vercel/node@5" }
+  ],
+  "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "src": "/(.*)", "dest": "/" }
   ]
 }
