--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,10 +3,11 @@
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
     "target": "ES2022",
     "lib": ["ES2022"],
-    "module": "ESNext", // Node API functions
-    "skipLibCheck": true, // ✅ prevents google-auth-library errors
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "skipLibCheck": true,
     "esModuleInterop": true,
-    "moduleResolution": "node",
+    "types": ["node"],
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
