--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,9 @@
 {
-  "version": 2,
   "framework": "vite",
-  "devCommand": "vite",
   "buildCommand": "vite build",
   "outputDirectory": "dist",
-  "builds": [
-    { "src": "api/**/*.ts", "use": "@vercel/node@5" },
-    { "src": "api/**/*.js", "use": "@vercel/node@5" }
-  ],
-  "routes": [
-    { "src": "/api/(.*)", "dest": "/api/$1" },
-    { "src": "/(.*)", "dest": "/" }
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api/$1" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
