--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@tailwindcss/vite": "^4.1.11",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/react-big-calendar": "^1.16.3",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -30,9 +31,10 @@
     "googleapis": "^155.0.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.536.0",
-    "luxon": "^3.7.1",
+    "luxon": "^3.7.2",
     "mongodb": "^6.18.0",
     "react": "^19.1.0",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.7.1",
