--- a/package.json
+++ b/package.json
@@ -15,13 +15,11 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
-    "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tabs": "^1.1.12",
     "@tailwindcss/vite": "^4.1.11",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/react-big-calendar": "^1.16.3",
@@ -30,6 +28,7 @@
     "clsx": "^2.1.1",
     "express": "^5.1.0",
     "googleapis": "^155.0.1",
+    "jspdf": "^2.5.1",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.536.0",
     "luxon": "^3.7.2",
