--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "dev:api": "tsx dev-api.ts",
     "dev:full": "concurrently -k \"npm:dev:api\" \"npm:dev\"",
-    "build": "tsc -b && vite build",
+    "build": "tsc --noEmit -p tsconfig.app.json && tsc --noEmit -p tsconfig.node.json && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "vercel-build": "vite build"
@@ -28,8 +28,8 @@
     "clsx": "^2.1.1",
     "express": "^5.1.0",
     "googleapis": "^155.0.1",
-    "jspdf": "^2.5.1",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.536.0",
     "luxon": "^3.7.2",
     "mongodb": "^6.18.0",
@@ -40,7 +40,8 @@
     "react-router-dom": "^7.7.1",
     "recharts": "^2.12.7",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -50,6 +51,8 @@
     "@types/next": "^9.0.0",
     "@types/node": "^24.2.0",
     "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.2.3",
+    "@types/web-push": "^3.6.4",
     "@vercel/node": "^5.3.11",
     "@vitejs/plugin-react": "^4.6.0",
     "autoprefixer": "^10.4.21",
@@ -63,6 +66,7 @@
     "tw-animate-css": "^1.3.6",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.35.1",
-    "vite": "^7.0.4"
+    "vite": "^7.0.4",
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
